// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variables-list Renders \`variables-list\` with custom props 1`] = `
<div
  childrenkey="variables"
  class="v-list pa-0 c-list v-sheet theme--light"
  role="list"
  zindex="2"
>
  <transition-stub
    name="fade-transition"
  >
    <!---->
  </transition-stub>
  <div
    class="v-list-item v-list-item--link theme--light"
    role="listitem"
    tabindex="0"
  >
    <div
      class="v-list-item__content"
    >
      <div
        class="v-list-item__title"
      >
        <div
          class="layout gap-4 justify-space-between"
        >
          <div
            class="layout align-center"
          >
            <v-list-item-mask-stub
              mask=""
              text="Entity"
            />
            <!---->
          </div>
          <!---->
          <!---->
        </div>
      </div>
    </div>
    <div
      class="v-list-item__action"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        arrow_right
      </i>
    </div>
  </div>
  <div
    class="c-list__append-item"
  />
  <!---->
  <!---->
</div>
`;

exports[`variables-list Renders \`variables-list\` with default props 1`] = `
<div
  class="v-list pa-0 c-list v-sheet theme--light"
  role="list"
>
  <transition-stub
    name="fade-transition"
  >
    <!---->
  </transition-stub>
  <div
    class="c-list__append-item"
  />
  <!---->
</div>
`;
